--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,1 +1,15 @@
+body{
+  color: $default;
+  font-size: 16px;
+  font-size: 26px;
+  line-height: 1.6;
+  @extend %quicksand-500
+}
+
+
+.container{
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
 
