--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,8 +1,19 @@
+html,
+body{
+  height: 100%;
+}
+
 body{
   color: $default;
   font-size: 16px;
-  line-height: 1.6;
-  @extend %quicksand-500
+  line-height: 26px;
+  @extend %quicksand-500;
+  display: flex;
+  flex-direction: column;
+}
+
+.main{
+  flex-grow: 1;
 }
 
 
@@ -10,5 +21,12 @@ body{
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
+}
+
+a{
+  color: $default;
+  font-size: 16px;
+  line-height: 1.6;
+  @extend %quicksand-500;
 }
 
