--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -60,6 +60,106 @@
   }
 }
 
+.footer{
+  background-color: $bg;
+  &__title{
+    margin-bottom: 40px;
+    color: $title;
+    @extend %roboto-500;
+    font-size: 22px;
+    line-height: 1;
+  }
+  &__adress,
+  &__email,
+  &__phone{
+    display: block;
+    margin-bottom: 14px;
+  }
+
+  &__social{
+    display: flex;
+    align-items: center;
+    margin-top: 30px;
+  }
+  &__social-item + .footer__social-item{
+    padding-left: 18px;
+  }
+  &__social-link{
+    transition: fill 0.5s ease;
+    path{
+      fill: $default;
+    }
+    &:hover{
+    path{
+      fill: $accent;
+     }
+    }
+  }
+  &__link{
+    margin-bottom: 14px;
+    display: block;
+  }
+  &__text{
+    margin-bottom: 25px;
+  }
+  &__form-input{
+    background-color: #fff;
+    max-width: 320px;
+    width: 100%;
+    border: none;
+    outline: 0;
+    padding: 12px 10px 12px 15px;
+    box-shadow: 0px 7px 20px 0px rgba(192, 192, 192, 0.3);
+    &::placeholder{
+      color: $default;
+      font-size: 16px;
+    }
+  }
+  &__form-btn{
+    border: none;
+    outline: 0;
+    background-color: $accent;
+    color: #fff;
+    text-transform: uppercase;
+    padding: 12px 26px;
+    box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+    cursor: pointer;
+  }
+  &__bottom{
+    height: 75px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 12px;
+  }
+  &__accept-img{
+     display: inline;
+     margin-left: 25px;
+     vertical-align: middle;
+  }
+}
+.footer-top{
+  padding: 70px 0 40px;
+  border-bottom: 1px solid #ececec;
+  display: flex;
+  justify-content: space-between;
+  &__contact{
+    width: 250px;
+    margin-right: 50px;
+  }
+  &__nav{
+    width: 170px;
+    margin-right: 30px;
+  }
+  &__form{
+    max-width: 470px;
+  }
+  &__logo{
+    display: block;
+    margin-bottom: 33px;
+  }
+}
+
 
 
 
