--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -22,12 +22,13 @@
   &__link{
     text-transform: uppercase;
     color: $title;
-    padding-bottom: 1px;
+    padding-bottom: 0 2px 1px;
     transition: all 0.5s ease;
     @extend %roboto-400;
     &:hover{
     color: $accent;
     border-bottom: 1px solid $accent;
+    @extend %roboto-700;
     }
   }
   &__link--active{
