--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -93,3 +93,46 @@ a{
   background-color: $bg;
 }
 
+.pagination{
+  display: flex;
+  justify-content: center;
+  padding: 30px 0;
+  .pagination__list{
+    display: flex;
+    align-items: center;
+    padding: 0 35px;
+  }
+  &__item{
+    padding: 0 15px;
+  }
+  &__link--active{
+    color: $accent;
+  }
+  &__arrows{
+    text-transform: uppercase;
+    position: relative;
+    &::before{
+      content: '';
+      position: absolute;
+      width: 5px;
+      height: 10px;
+      top: 8px;
+    }
+  }
+  &__prev{
+    padding-left: 15px;
+    &::before{
+     background-image: url('../images/icons/angle_left.svg');
+     background-repeat: no-repeat;
+     left: 0;
+    }
+  }
+  &__next{
+    padding-right: 15px;
+    &::before{
+     background-image: url('../images/icons/angle_right.svg');
+     background-repeat: no-repeat;
+     right: 0;
+    }
+  }
+}
