--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -104,10 +104,14 @@
   &__text{
     margin-bottom: 25px;
   }
+  &__form{
+    display: flex;
+  }
   &__form-input{
     background-color: #fff;
     max-width: 320px;
     width: 100%;
+    margin-right: 3px;
     border: none;
     outline: 0;
     padding: 12px 10px 12px 15px;
@@ -1949,7 +1953,6 @@
     height: 60px;
     background-color: $bg;
     border: none;
-    outline: 0;
     padding: 0 24px;
     margin-bottom: 30px;
   }
@@ -1960,7 +1963,6 @@
     height: 200px;
     background-color: $bg;
     border: none;
-    outline: 0;
     padding: 24px;
     margin-bottom: 30px;
   }
