--- a/app/404-page.njk
+++ b/app/404-page.njk
@@ -1,41 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="css/404-page.min.css">
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/404-page.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
+  </head>
 
-<body>
+  <body>
 
- {% include 'app/module/_header/_header.html' %}
+    {% include 'app/module/_header/_header.html' %}
 
-  <main class="main">
-    <section class="page-404">
-      <div class="container">
-        <div class="page-404__inner">
-          <div class="page-404__content">
-            <h2 class="page-404__title">OPPS! Page Not Found!!</h2>
-            <p class="page-404__text">
+    <main class="main">
+      <section class="page-404">
+        <div class="container">
+          <div class="page-404__inner">
+            <div class="page-404__content">
+              <h2 class="page-404__title">OPPS! Page Not Found!!</h2>
+              <p class="page-404__text">
               We,re sorry but we can’t seem to find the pages you request. This might be because
               you have typed the web address not
               find incorrectly.
             </p>
-            <a class="page-404__link" href="#">
+              <a class="page-404__link" href="#">
               back to home
             </a>
+            </div>
+            <img class="page-404__img" src="images/404.png" alt="404">
           </div>
-          <img class="page-404__img" src="images/404.png" alt="404">
         </div>
-      </div>
-    </section>
-  </main>
+      </section>
+    </main>
 
- {% include 'app/module/_footer/_footer.html'%}
+    {% include 'app/module/_footer/_footer.html'%}
 
-  <script src="js/main.min.js"></script>
-</body>
+    <script src="js/main.min.js"></script>
+  </body>
 
 </html>
