--- a/app/module/_footer/_footer.scss
+++ b/app/module/_footer/_footer.scss
@@ -62,9 +62,10 @@
     border: none;
   }
   &__bottom{
-    height: 75px;
+    min-height: 75px;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     align-items: center;
     font-size: 12px;
   }
@@ -93,5 +94,65 @@
   &__logo{
     display: block;
     margin-bottom: 33px;
+  }
+}
+
+
+@media (max-width: 1050px){
+  .footer-top{
+    flex-wrap: wrap;
+    &__form{
+      max-width: 100%;
+      margin-top: 30px;
+    }
+  }
+}
+
+@media (max-width: 860px){
+  .footer-top{
+    &__contact{
+      width: 100%;
+      margin-right: 0;
+      margin-bottom: 30px;
+    }
+  }
+}
+
+@media (max-width: 620px){
+  .footer{
+    &__bottom{
+      justify-content: center;
+    }
+      &__copy{
+        width: 100%;
+        text-align: center;
+      }
+      
+      &__accept-img{
+        margin-left: 15px;
+      }
+  }
+}
+
+@media (max-width: 450px){
+  .footer{
+    &__form{
+        flex-wrap: wrap;
+      }
+    &__form-input{
+      max-width: 100%;
+      margin-right: 0;
+      }
+    &__form-btn{
+      width: 100%; 
+      }  
+    &__accept-img{
+      margin-left: 15px;
+      }
+  }
+  .footer-top{
+    &__nav{
+      margin-top: 30px;
+    }
   }
 }
