--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -21,6 +21,7 @@
     margin-bottom: 40px;
     @extend %roboto-700;
     font-size: 48px;
+    line-height: 52px;
   }
   &__text{
     margin-bottom: 55px;
@@ -44,6 +45,9 @@
   &__filters{
     width: 370px;
     margin-right: 30px;
+  }
+  &__filter-btn{
+    display: none;
   }
 }
 
@@ -304,8 +308,6 @@
   }
 }
 
-
-
 .jq-selectbox__select {
   margin-left: 30px;
   height: 32px;
@@ -395,7 +397,6 @@
     margin-left: 15px;
   }
 }
-
 
 .jq-number__field {
   width: 114px;
